Fix gap

--- a/frontend/app/_components/post.module.scss
+++ b/frontend/app/_components/post.module.scss
@@ -20,7 +20,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  gap: 22px;
+  gap: 12px;
 }
 
 .editPost,
